infrastructure/bootstrap/infrastructure/elastic/controller/overlays/sandboxed-local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rig-elastic
  namespace: rig-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.sandbox.rijksapp.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kb-http
                port:
                  number: 5601
  tls:
    - hosts:
        - kibana.sandbox.rijksapp.dev
      secretName: sandbox-wildcard-tls
